// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/badge.md correctly 1`] = `
<div
  class="ezd-radio-group ant-radio-group-solid"
>
  <span
    class="ezd-badge"
  >
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="1"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Click Me
      </span>
    </label>
    <sup
      class="ezd-scroll-number ant-badge-count"
      data-show="true"
      title="1"
    >
      <span
        class="ezd-scroll-number-only"
        style="transition:none"
      >
        <span
          class="ezd-scroll-number-only-unit current"
        >
          1
        </span>
      </span>
    </sup>
  </span>
  <span
    class="ezd-badge"
  >
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="2"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Not Me
      </span>
    </label>
    <sup
      class="ezd-scroll-number ant-badge-count"
      data-show="true"
      title="2"
    >
      <span
        class="ezd-scroll-number-only"
        style="transition:none"
      >
        <span
          class="ezd-scroll-number-only-unit current"
        >
          2
        </span>
      </span>
    </sup>
  </span>
</div>
`;

exports[`renders ./components/radio/demo/basic.md correctly 1`] = `
<label
  class="ezd-radio-wrapper"
>
  <span
    class="ezd-radio"
  >
    <input
      class="ezd-radio-input"
      type="radio"
    />
    <span
      class="ezd-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disabled.md correctly 1`] = `
Array [
  <label
    class="ezd-radio-wrapper ant-radio-wrapper-disabled"
  >
    <span
      class="ezd-radio ant-radio-disabled"
    >
      <input
        class="ezd-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  <label
    class="ezd-radio-wrapper ant-radio-wrapper-disabled"
  >
    <span
      class="ezd-radio ant-radio-checked ant-radio-disabled"
    >
      <input
        checked=""
        class="ezd-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  <br />,
  <button
    class="ezd-btn ant-btn-primary"
    style="margin-top:16px"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>,
]
`;

exports[`renders ./components/radio/demo/radiobutton.md correctly 1`] = `
Array [
  <div
    class="ezd-radio-group ant-radio-group-outline"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ezd-radio-group ant-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-disabled"
      >
        <input
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ezd-radio-group ant-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked ant-radio-button-disabled"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-disabled"
      >
        <input
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-disabled"
      >
        <input
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-disabled"
      >
        <input
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/radio/demo/radiobutton-solid.md correctly 1`] = `
Array [
  <div
    class="ezd-radio-group ant-radio-group-solid"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ezd-radio-group ant-radio-group-solid"
    style="margin-top:16px"
  >
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-disabled"
      >
        <input
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/radio/demo/radiogroup.md correctly 1`] = `
<div
  class="ezd-radio-group ant-radio-group-outline"
>
  <label
    class="ezd-radio-wrapper ant-radio-wrapper-checked"
  >
    <span
      class="ezd-radio ant-radio-checked"
    >
      <input
        checked=""
        class="ezd-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="ezd-radio-wrapper"
  >
    <span
      class="ezd-radio"
    >
      <input
        class="ezd-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="ezd-radio-wrapper"
  >
    <span
      class="ezd-radio"
    >
      <input
        class="ezd-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="ezd-radio-wrapper"
  >
    <span
      class="ezd-radio"
    >
      <input
        class="ezd-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md correctly 1`] = `
<div
  class="ezd-radio-group ant-radio-group-outline"
>
  <div
    class="ezd-space ant-space-vertical"
  >
    <div
      class="ezd-space-item"
      style="margin-bottom:8px"
    >
      <label
        class="ezd-radio-wrapper ant-radio-wrapper-checked"
      >
        <span
          class="ezd-radio ant-radio-checked"
        >
          <input
            checked=""
            class="ezd-radio-input"
            type="radio"
            value="1"
          />
          <span
            class="ezd-radio-inner"
          />
        </span>
        <span>
          Option A
        </span>
      </label>
    </div>
    <div
      class="ezd-space-item"
      style="margin-bottom:8px"
    >
      <label
        class="ezd-radio-wrapper"
      >
        <span
          class="ezd-radio"
        >
          <input
            class="ezd-radio-input"
            type="radio"
            value="2"
          />
          <span
            class="ezd-radio-inner"
          />
        </span>
        <span>
          Option B
        </span>
      </label>
    </div>
    <div
      class="ezd-space-item"
      style="margin-bottom:8px"
    >
      <label
        class="ezd-radio-wrapper"
      >
        <span
          class="ezd-radio"
        >
          <input
            class="ezd-radio-input"
            type="radio"
            value="3"
          />
          <span
            class="ezd-radio-inner"
          />
        </span>
        <span>
          Option C
        </span>
      </label>
    </div>
    <div
      class="ezd-space-item"
    >
      <label
        class="ezd-radio-wrapper"
      >
        <span
          class="ezd-radio"
        >
          <input
            class="ezd-radio-input"
            type="radio"
            value="4"
          />
          <span
            class="ezd-radio-inner"
          />
        </span>
        <span>
          More...
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md correctly 1`] = `
Array [
  <div
    class="ezd-radio-group ant-radio-group-outline"
  >
    <label
      class="ezd-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ezd-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ezd-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="ezd-radio-group ant-radio-group-outline"
  >
    <label
      class="ezd-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ezd-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ezd-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-radio-wrapper ant-radio-wrapper-disabled"
    >
      <span
        class="ezd-radio ant-radio-disabled"
      >
        <input
          class="ezd-radio-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-radio-group ant-radio-group-outline"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="Orange"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-radio-group ant-radio-group-solid"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        class="ezd-radio-button ant-radio-button-disabled"
      >
        <input
          class="ezd-radio-button-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md correctly 1`] = `
<div
  class="ezd-radio-group ant-radio-group-outline"
>
  <label
    class="ezd-radio-wrapper ant-radio-wrapper-checked"
  >
    <span
      class="ezd-radio ant-radio-checked"
    >
      <input
        checked=""
        class="ezd-radio-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="ezd-radio-wrapper"
  >
    <span
      class="ezd-radio"
    >
      <input
        class="ezd-radio-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="ezd-radio-wrapper"
  >
    <span
      class="ezd-radio"
    >
      <input
        class="ezd-radio-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="ezd-radio-wrapper"
  >
    <span
      class="ezd-radio"
    >
      <input
        class="ezd-radio-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
      <span
        class="ezd-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/size.md correctly 1`] = `
Array [
  <div
    class="ezd-radio-group ant-radio-group-outline ant-radio-group-large"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ezd-radio-group ant-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="ezd-radio-group ant-radio-group-outline ant-radio-group-small"
    style="margin-top:16px"
  >
    <label
      class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ezd-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ezd-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="ezd-radio-button-wrapper"
    >
      <span
        class="ezd-radio-button"
      >
        <input
          class="ezd-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="ezd-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;
